--- a/CSS_INLINE.html
+++ b/CSS_INLINE.html
@@ -16,7 +16,7 @@
     </div>
 
     <div style="width: 50%; height: 50vh; background-color: #5353EC;">
-        <div style="width: 75vw; height: 50%; background-color: rgb(255, 47, 0);;">
+        <div style="width: 75vw; height: 50%; background-color: rgb(255, 47, 0);">
         </div>
     </div>
     
