--- a/CSS_INTERNO.html
+++ b/CSS_INTERNO.html
@@ -9,34 +9,34 @@
 
         .card_1 {
             background-color: #ECB653; 
-            width: 500px; 
-            height: 500px;
+            width: 600px; 
+            height: 50px;
         }
 
         .card_interno_1 {
-            background-color: #109010; 
-            width: 250px; 
-            height: 250px;
+            background-color: #907b10; 
+            width: 200px; 
+            height: 50px;
         }
 
         #paragrafo {
-            color: white; 
-            background-color: red; 
+            color: black; 
+            background-color: rgb(225, 195, 98); 
             font-size: 25px; 
-            font-family: monospace; 
+            font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; 
             font-weight: bold;
         }
 
         .card_2 {
-            width: 50%; 
-            height: 50vh; 
-            background-color: #5353EC;
+            width: 20%; 
+            height: 15vh; 
+            background-color: #925eb2;
         }
 
         .card_interno_2 {
-            width: 75vw; 
+            width: 30vw; 
             height: 50%; 
-            background-color: rgb(255, 47, 0);
+            background-color: rgb(92, 146, 216);
         }
 
     </style>
